package ar.edu.unlp.info.oo2.facturacion_llamadas;

public class Llamada {
    private String tipoDeLlamada;
    private String origen;
    private String destino;
    private int duracion;

    public Llamada(String tipoLlamada, String origen, String destino, int duracion) {
        this.tipoDeLlamada = tipoLlamada;
        this.origen = origen;
        this.destino = destino;
        this.duracion = duracion;
    }

    public String getTipoDeLlamada() {
        return tipoDeLlamada;
    }

    public String getRemitente() {
        return destino;
    }

    public int getDuracion() {
        return this.duracion;
    }

    public String getOrigen() {
        return origen;
    }
}
